# piece-hal

./: .gitignore  diagstream.cpp  diagstream.h  display.cpp  display.h  gpio.cpp  gpio.h  gpioconfig.h  main.cpp  serial.cpp  serial.h  ssidenum.cpp  ssidenum.h  system.cpp  system.h  transmission.cpp  transmission.h
hal/: diag.cpp  diag.h  diag.hpp  display.h  gpio.h  interface.h  serial.h  system.h  wifi.h
include/: device.h  diagstream.h  display.h  gpio.h  serial.h  ssidenum.h  storage.h  system.h  transmission.h
linux/: config.h  gpio.cpp  platform.cpp  serial.cpp  wifi-ssid-emu.cpp
project/cmake/: CMakeLists.txt
src/linux/: diag.cpp  display.cpp  serial-emulator.cpp  system.cpp  wifi-broadcast-emu.cpp  wifi-broadcast.cpp
